# GameEngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
Source/: App.cpp  App.h  Base.cpp  Base.h  Engine.cpp  Engine.h  EngineLoop.cpp  EngineLoop.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
Source/Core/: CoreMinimal.h  CoreTypes.h
Source/Core/HAL/: GenericPlatformMisc.cpp  GenericPlatformMisc.h  GenericPlatformProcess.cpp  GenericPlatformProcess.h  GenericPlatformTLS.cpp  GenericPlatformTLS.h  GenericPlatformTime.cpp  GenericPlatformTime.h  Platform.h
Source/Core/HAL/Event/: Event.cpp  Event.h
Source/Core/HAL/Thread/: Runnable.cpp  Runnable.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h
Source/Core/Logging/: LogMarco.h
Source/Core/Platform/Windows/: WindowPlatformProcess.cpp  WindowPlatformProcess.h  WindowsEvent.cpp  WindowsEvent.h  WindowsPlatform.h  WindowsPlatformMisc.cpp  WindowsPlatformMisc.h  WindowsPlatformTLS.cpp  WindowsPlatformTLS.h  WindowsPlatformTime.cpp  WindowsPlatformTime.h  WindowsThread.cpp  WindowsThread.h  WindowsTime.cpp  WindowsTime.h
Source/Launcher/: Launcher.cpp  Launcher.h
Source/Misc/: App.cpp  App.h
cmake/: tools.cmake
